--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
           credentials: ${{ secrets.credentials }}
           filename: "build/Android/Android.apk"
           folderId: ${{ secrets.folderId }}
-          name: "Wild Leprechaun.apk"
+          name: "Ambulance Racer.apk"
           overwrite: "true" # optional boolean
           
   Deploy_AAB:
@@ -118,5 +118,5 @@ jobs:
           credentials: ${{ secrets.credentials }}
           filename: "build/Android/Android.aab"
           folderId: ${{ secrets.folderId }}
-          name: "Wild Leprechaun.aab"
+          name: "Ambulance Racer.aab"
           overwrite: "true" # optional boolean
